# ansible_af

./: .gitignore  CODE_OF_CONDUCT.md  README.md  ansible_af.py  pyproject.toml  readme.md  render.py  requirements.txt  setup.cfg
.github/workflows/: pytest.yaml  python-package.yml
ansible_af/: __init__.py  config.py  db.py  dhcp_helper.py  flask_app.py  gunicorn.py  inventory.py  routes.py  runner.py
examples/: ansible-af-http.service  ansible-af-runner.service  etc-ansible-playbooks-ansible_af-upgrade.yaml  etc-ansible-playbooks-ansible_af.yaml  etc_ansible_hosts  etc_ansible_playbooks_configure_netplan_knode.yaml  etc_ansible_playbooks_templates_armbian_first_boot.j2  etc_ansible_playbooks_templates_netplan_knode.yaml.j2  readme.md
tests/: test_config.py  test_flask_app.py  test_routes.py
